--- a/TaskManager/TodoList.csproj
+++ b/TaskManager/TodoList.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MoraisFramework" Version="1.0.2" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.10.7" />
   </ItemGroup>
+
 
 </Project>
